--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-django
-gunicorn
-django-heroku
-channels
-daphne
-channels-redis
-psycopg2-binary
-coverage
-django-mathfilters
-service_identity
-selenium
+django=2.2.1
+gunicorn=19.9.0
+django-heroku=0.3.1
+channels=2.2.0
+daphne=2.3.0
+channels-redis=2.4.0
+psycopg2-binary=2.8.2
+coverage=4.5.3
+django-mathfilters=0.4.0
+service_identity=18.1.0
+selenium=3.141.0
